--- a/STK_UNCOMPLETED_2/mainpage.html
+++ b/STK_UNCOMPLETED_2/mainpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" media="screen" href="mainpage.css">
+  <script src="home.js"></script>
     <title>STK Main Page</title>
     
 </head>
@@ -12,7 +13,7 @@
       <p><img src="images/stklogo.png" alt="stklogo" class="stkimage" style="width: 400px; height: 250px;"></p>
       <hr>
       <div style="text-align: center">
-            <a href="upload.html"><button class="buttonfor" style=" border:5px solid blue">업로드</button></a>
+            <a href="upload.html"><button class="buttonfor" style=" border:5px solid blue" onclick="onClick();">업로드</button></a>
              <a href="login.html"><button class="buttonfor" style=" border:5px solid red">로그인</button></a>
             <a href="join.html"><button class="buttonfor" style=" border:5px solid green">회원가입</button></a>
             <a href="login.html"><button class="buttonfor" style=" border:5px solid yellow">만화보기</button></a>
