--- a/STK_UNCOMPLETED_2/mainpage.html
+++ b/STK_UNCOMPLETED_2/mainpage.html
@@ -13,8 +13,8 @@
       <p><img src="images/stklogo.png" alt="stklogo" class="stkimage" style="width: 400px; height: 250px;"></p>
       <hr>
       <div style="text-align: center">
-            <a href="upload.html"><button class="buttonfor" style=" border:5px solid blue" onclick="onClick();">업로드</button></a>
-             <a href="login.html"><button class="buttonfor" style=" border:5px solid red">로그인</button></a>
+            <button class="buttonfor" style=" border:5px solid blue" onclick="onClick();">업로드</button>
+            <a href="login.html"><button class="buttonfor" style=" border:5px solid red">로그인</button></a>
             <a href="join.html"><button class="buttonfor" style=" border:5px solid green">회원가입</button></a>
             <a href="login.html"><button class="buttonfor" style=" border:5px solid yellow">만화보기</button></a>
       </div>
@@ -22,10 +22,16 @@
       <div>
           <img src="images/neuk.png" alt="너의 얼굴을 보아라" class="stkimage">
       </div>
-      <div class="weare">
-          STK는 만화 그리고 웹사이트를 만드는 <del>회사</del> 도곡중학교의 자율동아리입니다 </div>
-      <a href="join.html"><p class="joinus">JOIN US</p></a>
-      
+      <div class="weare" >
+        |    STK는 만화 그리고 웹사이트를 만드는 <del>회사</del> 도곡중학교의 자율동아리입니다   | </div>
+        <br>
+            <a href="join.html">
+            <center>
+            <div align="center" style="width:700px;height:100px;padding:10px;border
+            :10px solid darkblue ; font-size:80px;color:chocolate"> JOIN US
+            </div>
+            </center>
+            </a>
 
-</body>
+      </body>
 </html>
